# mandelbrot-c

./: .gitignore  CMakeLists.txt  README.md  app  color.h  config.h  imageprocessing.h  main.c  mandelbrot.config  mandelbrot.config-coolexample  mandelbrot.h  types.h
src/: color.c  color.h  config.c  config.h  cp_dirent.h  imageprocessing.c  imageprocessing.h  main.c  mandelbrot.c  mandelbrot.h  types.h
